@@ -3,6 +3,8 @@ CHANGELOG
 == May 16, 2012
 * Added sitemaps
 * Automatic generation of sitemaps in Resque
+* Improved Sitemap for news
+* Fixed SOLR Resque delete from index 
 
 == May 14, 2012
 * Added time left in words for future items (in red color)
